# esp-zigbee-usb-switch

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/agents/: esp-idf-zigbee.agent.md  zigbee-protocol-reviewer.agent.md
.github/hooks/: block-destructive-git.json
.github/hooks/scripts/: block-destructive-git.sh
.github/instructions/: esp-idf-config-and-cmake.instructions.md  zigbee-ota.instructions.md
.github/workflows/: create-release-tag.yml  release.yml
assets/: zigbee-usb-switch.fzz
main/: CMakeLists.txt  esp_zb_light.c  esp_zb_light.h  gpio_input.c  gpio_input.h  idf_component.yml  light_driver.c  light_driver.h  ota.c  ota.h  switch_driver.c  switch_driver.h  toggle.c  toggle.h  zcl_utility.c  zcl_utility.h  zigbee_usb_switch.c  zigbee_usb_switch.h
z2m_converter/: ota-index.json  usb-switch.js  usb-switch.mjs
